改了一下打印的输出

--- a/notebooks/monkey_test.ipynb
+++ b/notebooks/monkey_test.ipynb
@@ -236,7 +236,8 @@
     {
      "data": {
       "text/plain": [
-       "[<__main__.CoreServerSen at 0x27a8314d518>]"
+       "[<__main__.CoreServerSen at 0x26925ebce10>,\n",
+       " <__main__.CoreServerSen at 0x26925ebce48>]"
       ]
      },
      "execution_count": 4,
@@ -285,7 +286,8 @@
     {
      "data": {
       "text/plain": [
-       "[<__main__.CoreServerSen at 0x27a831c33c8>]"
+       "[<__main__.CoreServerSen at 0x26925f320b8>,\n",
+       " <__main__.CoreServerSen at 0x26925f46390>]"
       ]
      },
      "execution_count": 6,
@@ -306,7 +308,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "赵文华先生是德勤咨询公司一位出色的合伙人\n"
+      "赵文华先生是德勤咨询公司一位出色的合伙人\n",
+      "由赵文华先生领导的德勤分析研究院为多家合作伙伴提供了卓越的解决方案。\n"
      ]
     }
    ],
@@ -324,7 +327,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'docTokenBegin': 0, 'docTokenEnd': 1, 'tokenBegin': 0, 'tokenEnd': 1, 'text': '赵文华', 'characterOffsetBegin': 0, 'characterOffsetEnd': 3, 'ner': 'PERSON'}, {'docTokenBegin': 3, 'docTokenEnd': 6, 'tokenBegin': 3, 'tokenEnd': 6, 'text': '德勤咨询公司', 'characterOffsetBegin': 6, 'characterOffsetEnd': 12, 'ner': 'ORGANIZATION'}, {'docTokenBegin': 6, 'docTokenEnd': 7, 'tokenBegin': 6, 'tokenEnd': 7, 'text': '一', 'characterOffsetBegin': 12, 'characterOffsetEnd': 13, 'ner': 'NUMBER', 'normalizedNER': '1'}]\n"
+      "[{'docTokenBegin': 0, 'docTokenEnd': 1, 'tokenBegin': 0, 'tokenEnd': 1, 'text': '赵文华', 'characterOffsetBegin': 0, 'characterOffsetEnd': 3, 'ner': 'PERSON'}, {'docTokenBegin': 3, 'docTokenEnd': 6, 'tokenBegin': 3, 'tokenEnd': 6, 'text': '德勤咨询公司', 'characterOffsetBegin': 6, 'characterOffsetEnd': 12, 'ner': 'ORGANIZATION'}, {'docTokenBegin': 6, 'docTokenEnd': 7, 'tokenBegin': 6, 'tokenEnd': 7, 'text': '一', 'characterOffsetBegin': 12, 'characterOffsetEnd': 13, 'ner': 'NUMBER', 'normalizedNER': '1'}]\n",
+      "[{'docTokenBegin': 1, 'docTokenEnd': 2, 'tokenBegin': 1, 'tokenEnd': 2, 'text': '赵文华', 'characterOffsetBegin': 1, 'characterOffsetEnd': 4, 'ner': 'PERSON'}, {'docTokenBegin': 5, 'docTokenEnd': 8, 'tokenBegin': 5, 'tokenEnd': 8, 'text': '德勤分析研究院', 'characterOffsetBegin': 9, 'characterOffsetEnd': 16, 'ner': 'ORGANIZATION'}]\n"
      ]
     }
    ],
@@ -351,8 +355,10 @@
     {
      "data": {
       "text/plain": [
-       "[<__main__.CoreServerQuest at 0x27a8314d320>,\n",
-       " <__main__.CoreServerQuest at 0x27a8314d588>]"
+       "[<__main__.CoreServerQuest at 0x26925ebc3c8>,\n",
+       " <__main__.CoreServerQuest at 0x26925ebcef0>,\n",
+       " <__main__.CoreServerQuest at 0x26925ebc358>,\n",
+       " <__main__.CoreServerQuest at 0x26925ebc2b0>]"
       ]
      },
      "execution_count": 10,
@@ -383,6 +389,18 @@
       "答1： 赵文华先生是德勤咨询公司一位出色的合伙人\n",
       "答2： 赵文华先生是德勤咨询公司一位出色的合伙人\n",
       "答3： 赵文华先生是德勤咨询公司一位出色的合伙人，他于十几年前来到了中国。\n",
+      "\n",
+      "\n",
+      "问： 由{ 谁 }先生领导的德勤分析研究院为多家合作伙伴提供了卓越的解决方案。\n",
+      "答1： 由赵文华先生领导的德勤分析研究院为多家合作伙伴提供了卓越的解决方案。\n",
+      "答2： 由赵文华先生领导的德勤分析研究院为多家合作伙伴提供了卓越的解决方案。\n",
+      "答3： 由赵文华先生领导的德勤分析研究院为多家合作伙伴提供了卓越的解决方案。\n",
+      "\n",
+      "\n",
+      "问： 由赵文华先生领导的{ 什么 组织|机构 }为多家合作伙伴提供了卓越的解决方案。\n",
+      "答1： 由赵文华先生领导的德勤分析研究院为多家合作伙伴提供了卓越的解决方案。\n",
+      "答2： 由赵文华先生领导的德勤分析研究院为多家合作伙伴提供了卓越的解决方案。\n",
+      "答3： 由赵文华先生领导的德勤分析研究院为多家合作伙伴提供了卓越的解决方案。\n",
       "\n",
       "\n"
      ]
