修改用例文本

--- a/notebooks/monkey_test.ipynb
+++ b/notebooks/monkey_test.ipynb
@@ -222,11 +222,18 @@
     "# 何洛洛给出了否定的答案，“每个人都有自己的选择，既然选择了《创造营2019》，那我明年继续备战高考。”'\n",
     "\n",
     "# text = \"作为山东人具体一年到头要吃几顿饺子真的没有具体数字，想吃了就调上馅儿包上咱就吃说说我们这儿必须吃饺子的日子：小年吃、大年三十12点钟声一敲必须吃饺子、正月初二送年的时候吃、过冬至的时候吃（俗语是为了防止冻耳朵），有人要远行一定要吃送行的饺子（俗语上车的饺子下车的面）还有嫁女儿一定要吃饺子，俗语叫做“滚蛋饺”（哈哈）\"\n",
-    "text = \"赵文华先生是德勤咨询公司一位出色的合伙人，他于十几年前来到了中国。由赵文华先生领导的德勤分析研究院为多家合作伙伴提供了卓越的解决方案。\"\n",
+    "text = \"马云是阿里巴巴集团的创始人之一，他于十几年前在浙江杭州创办了阿里巴巴集团。在2019年，阿里巴巴集团与上海签订了战略合作协议。\"\n",
     "analyzer = CoreServerAnalyzer()\n",
     "ann = CoreServerAnn(text)\n",
     "ann = analyzer(ann)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -236,8 +243,8 @@
     {
      "data": {
       "text/plain": [
-       "[<__main__.CoreServerSen at 0x26925ebce10>,\n",
-       " <__main__.CoreServerSen at 0x26925ebce48>]"
+       "[<__main__.CoreServerSen at 0x2b5ccec1be0>,\n",
+       " <__main__.CoreServerSen at 0x2b5ccec1c18>]"
       ]
      },
      "execution_count": 4,
@@ -286,8 +293,9 @@
     {
      "data": {
       "text/plain": [
-       "[<__main__.CoreServerSen at 0x26925f320b8>,\n",
-       " <__main__.CoreServerSen at 0x26925f46390>]"
+       "[<__main__.CoreServerSen at 0x2b5ccf355c0>,\n",
+       " <__main__.CoreServerSen at 0x2b5ccf35668>,\n",
+       " <__main__.CoreServerSen at 0x2b5cced89e8>]"
       ]
      },
      "execution_count": 6,
@@ -308,8 +316,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "赵文华先生是德勤咨询公司一位出色的合伙人\n",
-      "由赵文华先生领导的德勤分析研究院为多家合作伙伴提供了卓越的解决方案。\n"
+      "马云是阿里巴巴集团的创始人之一\n",
+      "他于十几年前在浙江杭州创办了阿里巴巴集团\n",
+      "在2019年，阿里巴巴集团与上海签订了战略合作协议。\n"
      ]
     }
    ],
@@ -327,8 +336,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'docTokenBegin': 0, 'docTokenEnd': 1, 'tokenBegin': 0, 'tokenEnd': 1, 'text': '赵文华', 'characterOffsetBegin': 0, 'characterOffsetEnd': 3, 'ner': 'PERSON'}, {'docTokenBegin': 3, 'docTokenEnd': 6, 'tokenBegin': 3, 'tokenEnd': 6, 'text': '德勤咨询公司', 'characterOffsetBegin': 6, 'characterOffsetEnd': 12, 'ner': 'ORGANIZATION'}, {'docTokenBegin': 6, 'docTokenEnd': 7, 'tokenBegin': 6, 'tokenEnd': 7, 'text': '一', 'characterOffsetBegin': 12, 'characterOffsetEnd': 13, 'ner': 'NUMBER', 'normalizedNER': '1'}]\n",
-      "[{'docTokenBegin': 1, 'docTokenEnd': 2, 'tokenBegin': 1, 'tokenEnd': 2, 'text': '赵文华', 'characterOffsetBegin': 1, 'characterOffsetEnd': 4, 'ner': 'PERSON'}, {'docTokenBegin': 5, 'docTokenEnd': 8, 'tokenBegin': 5, 'tokenEnd': 8, 'text': '德勤分析研究院', 'characterOffsetBegin': 9, 'characterOffsetEnd': 16, 'ner': 'ORGANIZATION'}]\n"
+      "[{'docTokenBegin': 0, 'docTokenEnd': 1, 'tokenBegin': 0, 'tokenEnd': 1, 'text': '马云', 'characterOffsetBegin': 0, 'characterOffsetEnd': 2, 'ner': 'PERSON'}, {'docTokenBegin': 2, 'docTokenEnd': 4, 'tokenBegin': 2, 'tokenEnd': 4, 'text': '阿里巴巴集团', 'characterOffsetBegin': 3, 'characterOffsetEnd': 9, 'ner': 'ORGANIZATION'}, {'docTokenBegin': 6, 'docTokenEnd': 7, 'tokenBegin': 6, 'tokenEnd': 7, 'text': '之一', 'characterOffsetBegin': 13, 'characterOffsetEnd': 15, 'ner': 'MISC'}]\n",
+      "[{'docTokenBegin': 2, 'docTokenEnd': 3, 'tokenBegin': 2, 'tokenEnd': 3, 'text': '十几', 'characterOffsetBegin': 2, 'characterOffsetEnd': 4, 'ner': 'NUMBER'}, {'docTokenBegin': 3, 'docTokenEnd': 5, 'tokenBegin': 3, 'tokenEnd': 5, 'text': '年前', 'characterOffsetBegin': 4, 'characterOffsetEnd': 6, 'ner': 'MISC'}, {'docTokenBegin': 6, 'docTokenEnd': 7, 'tokenBegin': 6, 'tokenEnd': 7, 'text': '浙江', 'characterOffsetBegin': 7, 'characterOffsetEnd': 9, 'ner': 'STATE_OR_PROVINCE'}, {'docTokenBegin': 7, 'docTokenEnd': 8, 'tokenBegin': 7, 'tokenEnd': 8, 'text': '杭州', 'characterOffsetBegin': 9, 'characterOffsetEnd': 11, 'ner': 'CITY'}, {'docTokenBegin': 10, 'docTokenEnd': 12, 'tokenBegin': 10, 'tokenEnd': 12, 'text': '阿里巴巴集团', 'characterOffsetBegin': 14, 'characterOffsetEnd': 20, 'ner': 'ORGANIZATION'}]\n",
+      "[{'docTokenBegin': 1, 'docTokenEnd': 2, 'tokenBegin': 1, 'tokenEnd': 2, 'text': '2019年', 'characterOffsetBegin': 1, 'characterOffsetEnd': 6, 'ner': 'DATE', 'normalizedNER': '2019-XX-XX'}, {'docTokenBegin': 3, 'docTokenEnd': 5, 'tokenBegin': 3, 'tokenEnd': 5, 'text': '阿里巴巴集团', 'characterOffsetBegin': 7, 'characterOffsetEnd': 13, 'ner': 'ORGANIZATION'}, {'docTokenBegin': 6, 'docTokenEnd': 7, 'tokenBegin': 6, 'tokenEnd': 7, 'text': '上海', 'characterOffsetBegin': 14, 'characterOffsetEnd': 16, 'ner': 'STATE_OR_PROVINCE'}]\n"
      ]
     }
    ],
@@ -355,10 +365,10 @@
     {
      "data": {
       "text/plain": [
-       "[<__main__.CoreServerQuest at 0x26925ebc3c8>,\n",
-       " <__main__.CoreServerQuest at 0x26925ebcef0>,\n",
-       " <__main__.CoreServerQuest at 0x26925ebc358>,\n",
-       " <__main__.CoreServerQuest at 0x26925ebc2b0>]"
+       "[<__main__.CoreServerQuest at 0x2b5ccf09940>,\n",
+       " <__main__.CoreServerQuest at 0x2b5ccf097f0>,\n",
+       " <__main__.CoreServerQuest at 0x2b5ccf09668>,\n",
+       " <__main__.CoreServerQuest at 0x2b5ccec12b0>]"
       ]
      },
      "execution_count": 10,
@@ -379,28 +389,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "问： { 谁 }先生是德勤咨询公司一位出色的合伙人\n",
-      "答1： 赵文华先生是德勤咨询公司一位出色的合伙人\n",
-      "答2： 赵文华先生是德勤咨询公司一位出色的合伙人\n",
-      "答3： 赵文华先生是德勤咨询公司一位出色的合伙人，他于十几年前来到了中国。\n",
+      "问： { 谁 }是阿里巴巴集团的创始人之一\n",
+      "答1： 马云是阿里巴巴集团的创始人之一\n",
+      "答2： 马云是阿里巴巴集团的创始人之一，他于十几年前在浙江杭州创办了阿里巴巴集团。\n",
+      "答3： 马云是阿里巴巴集团的创始人之一，他于十几年前在浙江杭州创办了阿里巴巴集团。在2019年，阿里巴巴集团与上海签订了战略合作协议。\n",
       "\n",
       "\n",
-      "问： 赵文华先生是{ 什么 组织|机构 }一位出色的合伙人\n",
-      "答1： 赵文华先生是德勤咨询公司一位出色的合伙人\n",
-      "答2： 赵文华先生是德勤咨询公司一位出色的合伙人\n",
-      "答3： 赵文华先生是德勤咨询公司一位出色的合伙人，他于十几年前来到了中国。\n",
+      "问： 马云是{ 什么 组织|机构 }的创始人之一\n",
+      "答1： 马云是阿里巴巴集团的创始人之一\n",
+      "答2： 马云是阿里巴巴集团的创始人之一，他于十几年前在浙江杭州创办了阿里巴巴集团。\n",
+      "答3： 马云是阿里巴巴集团的创始人之一，他于十几年前在浙江杭州创办了阿里巴巴集团。在2019年，阿里巴巴集团与上海签订了战略合作协议。\n",
       "\n",
       "\n",
-      "问： 由{ 谁 }先生领导的德勤分析研究院为多家合作伙伴提供了卓越的解决方案。\n",
-      "答1： 由赵文华先生领导的德勤分析研究院为多家合作伙伴提供了卓越的解决方案。\n",
-      "答2： 由赵文华先生领导的德勤分析研究院为多家合作伙伴提供了卓越的解决方案。\n",
-      "答3： 由赵文华先生领导的德勤分析研究院为多家合作伙伴提供了卓越的解决方案。\n",
+      "问： 他于十几年前在浙江杭州创办了{ 什么 组织|机构 }\n",
+      "答1： 他于十几年前在浙江杭州创办了阿里巴巴集团\n",
+      "答2： 马云是阿里巴巴集团的创始人之一，他于十几年前在浙江杭州创办了阿里巴巴集团。\n",
+      "答3： 马云是阿里巴巴集团的创始人之一，他于十几年前在浙江杭州创办了阿里巴巴集团。在2019年，阿里巴巴集团与上海签订了战略合作协议。\n",
       "\n",
       "\n",
-      "问： 由赵文华先生领导的{ 什么 组织|机构 }为多家合作伙伴提供了卓越的解决方案。\n",
-      "答1： 由赵文华先生领导的德勤分析研究院为多家合作伙伴提供了卓越的解决方案。\n",
-      "答2： 由赵文华先生领导的德勤分析研究院为多家合作伙伴提供了卓越的解决方案。\n",
-      "答3： 由赵文华先生领导的德勤分析研究院为多家合作伙伴提供了卓越的解决方案。\n",
+      "问： 在2019年，{ 什么 组织|机构 }与上海签订了战略合作协议。\n",
+      "答1： 在2019年，阿里巴巴集团与上海签订了战略合作协议。\n",
+      "答2： 在2019年，阿里巴巴集团与上海签订了战略合作协议。\n",
+      "答3： 马云是阿里巴巴集团的创始人之一，他于十几年前在浙江杭州创办了阿里巴巴集团。在2019年，阿里巴巴集团与上海签订了战略合作协议。\n",
       "\n",
       "\n"
      ]
@@ -410,8 +420,8 @@
     "for q in ann.quests:\n",
     "    print(\"问：\", q.text)\n",
     "    print(\"答1：\", q.comefrom.text)\n",
-    "    print(\"答2：\", q.comefrom.text)\n",
-    "    print(\"答3：\", q.comefrom.comefrom.text)\n",
+    "    print(\"答2：\", q.comefrom.comefrom.text)\n",
+    "    print(\"答3：\", q.comefrom.comefrom.comefrom.text)\n",
     "    print('\\n')"
    ]
   },
